# rust-ml

./: .gitignore  Cargo.toml  README.md
src/: binop_minus.rs  binop_mult.rs  binop_plus.rs  binop_polynomial.rs  calc_utils.rs  dimension.rs  fixed.rs  layer.rs  lib.rs  linalg.rs  main.rs  model.rs  probieren.rs  raw.rs  tensor.rs  tensor_env.rs  tracker.rs  unop_avg.rs  unop_minus.rs  unop_sum.rs
src/base/: buf.rs  collection.rs  element_wise.rs  matrix.rs  mod.rs  scalar.rs  tensor.rs  vector.rs
src/base/ops/: mod.rs
src/linalg/: mod.rs  naive.rs
src/n/: binop_minus.rs  binop_mult.rs  binop_plus.rs  binop_polynomial.rs  calc_minus.rs  calc_mult.rs  calc_mult_scalar.rs  calc_plus.rs  calc_utils.rs  mod.rs  tensor.rs  tracker.rs  unop_avg.rs  unop_minus.rs  unop_sum.rs
src/operations/: binop_minus.rs  binop_minus.wgsl  binop_minus_r.wgsl  binop_mult.rs  binop_mult.wgsl  binop_plus.rs  binop_plus.wgsl  binop_polynomial.rs  calc_utils.rs  calc_utils_blas.rs  calc_utils_wgpu.rs  mod.rs  unop_avg.rs  unop_minus.rs  unop_sum.rs  unop_sum.wgsl
src/test_utils/: mod.rs  tensor_factories.rs  with_all_envs.rs
