[package]
name = "rust-ml"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rstest = "0"
#simple_logger = "4"

[dependencies]
lazy_static = "1"
rand = "0"
rustc-hash = "1"
triomphe = "0.1"

blas = "0.22"
#openblas-src = "0.10"

#log = "0.4.21"
#tracing = "0"
#mathru = "0"
### nalgebra = "0"
#tract-linalg = "0"

#autograd = "2.0.0-rc3"

#[profile.release]
#codegen-units = 1
#lto = "fat"

